# monero-node

./: .gitignore  .gitmodules  .terraform.lock.hcl  README.md  compute.tf  docker-compose.yml  go.mod  go.sum  keypair.tf  main.tf  miners.tf  security.tf  setup-miner.sh  setup-p2pool-node.sh  terraform.tf  variables.tf
.github/workflows/: docker-build-push-monerod.yml  docker-build-push-p2pool.yml  docker-build-push-tor-node.yml  docker-build-push-xmrig.yml
ansible/: README.md  ansible.cfg  main.yml
ansible/tasks/: firewall.yml  service.yml
ansible/vars/: firewall.yml  p2pool-tor-service.yml
listener/: README.md  lambda_function.py  pyproject.toml
listener/tests/: conftest.py  test_handler.py
listener/tests/resources/: startup-event-1.json  startup-event-2.json  startup-event-3.json
modules/: setup-miner.sh  setup-miner.tftpl
modules/aws/: keypair.tf  main.tf  miner.tf  secrets.tf  security.tf  terraform.tf  variables.tf
modules/dreamcompute/: keypair.tf  miner.tf  miners.tf  pool.tf  security.tf  setup-pool.sh  terraform.tf  (+1 more)
monerod/: Dockerfile
node-exporter/: errors.go  exporter.go  host.go  hostpair.go  types.go
p2pool/: Dockerfile
rpc-proxy/: .gitignore  httpd.conf  update-passwords.sh
status/: pyproject.toml
tor-hidden-service/: Dockerfile  entrypoint.sh
tor-miner/: Dockerfile  config.go  config.sh  crypto.go  decolor.go  go.mod  header_auth.go  http_api.go  metadata.go  monitor.go  panique.go  process.go  report.go  resolver.go  runner.go  sealed.config
tor-node/: Dockerfile  entrypoint.sh
xmrig/: Dockerfile  config.json
(+12 files in other folders)
