[project]
name = "xmrig-status-listener"
version = "0.0.0"
dependencies = [
    "boto3",
    "requests",
]

[project.optional-dependencies]
dev = [
    "aws-lambda-powertools[all]",
    "flake8",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
